Bug 457806 - "<source> child of <audio> causes HTML parser to enter infinite loop" [r+sr=mrbkap]
UltraBlame original commit: 96bf4c4184ed3deb60174a1d1448b1522b11ef52

--- a/content/media/video/test/test_constants.html
+++ b/content/media/video/test/test_constants.html
@@ -160,6 +160,9 @@ video
 audio
 >
 <
+source
+>
+<
 /
 audio
 >
@@ -1116,6 +1119,168 @@ source
 )
 [
 0
+]
+.
+CAN_PLAY_THROUGH
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+EMPTY
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+LOADING
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+LOADED_METADATA
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+LOADED_FIRST_FRAME
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+LOADED
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+DATA_UNAVAILABLE
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+CAN_SHOW_CURRENT_FRAME
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
+]
+.
+CAN_PLAY
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+1
 ]
 .
 CAN_PLAY_THROUGH
