Disable Cross-Site XHR tests on mac since the mochitest server freaks out.
UltraBlame original commit: 6091a19ce489d90fe9cc44b0c445bdc508e5e51d

--- a/content/base/test/test_CrossSiteXHR.html
+++ b/content/base/test/test_CrossSiteXHR.html
@@ -510,6 +510,40 @@ runTest
 (
 )
 {
+if
+(
+navigator
+.
+platform
+=
+=
+"
+MacIntel
+"
+)
+{
+todo
+(
+false
+"
+httpd
+.
+js
+fails
+on
+Mac
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+yield
+;
+}
 var
 loader
 =
@@ -3518,18 +3552,6 @@ toSource
 )
 ;
 }
-/
-*
-SimpleTest
-.
-finish
-(
-)
-;
-yield
-;
-*
-/
 for
 each
 (
