--- a/content/base/test/test_CrossSiteXHR_cache.html
+++ b/content/base/test/test_CrossSiteXHR_cache.html
@@ -252,6 +252,40 @@ runTest
 (
 )
 {
+if
+(
+navigator
+.
+platform
+=
+=
+"
+MacIntel
+"
+)
+{
+todo
+(
+false
+"
+httpd
+.
+js
+fails
+on
+Mac
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+yield
+;
+}
 var
 loader
 =
