Bug 458167 - (comments-only changes) Grammar Nazi Vol1: s/it's/its/ for the posessive version of the word, and a few other misc comment-typos, in these directories: accessible browser config profile rdf toolkit tools xpcom xpfe
UltraBlame original commit: d47a01a87c6c07e894685d7994d901d351afaea0

--- a/accessible/accessible-docs.html
+++ b/accessible/accessible-docs.html
@@ -6029,9 +6029,7 @@ Here
 are
 some
 of
-it
-'
-s
+its
 quirks
 and
 some
@@ -6377,9 +6375,7 @@ object
 is
 destroyed
 shutdown
-it
-'
-s
+its
 accessible
 object
 as
