Comment Bug 457369 - ISimpleDOMNode navigation methods creates nsAccessNodeWrap everytime, r=aaronlev, marcoz
UltraBlame original commit: c0424e568b5eac407f2e5782313c578edaa3bf6c

--- a/accessible/tests/mochitest/test_nsIAccessNode_invalidation.html
+++ b/accessible/tests/mochitest/test_nsIAccessNode_invalidation.html
@@ -152,6 +152,39 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
 >
 function
 doTest
@@ -159,183 +192,16 @@ doTest
 )
 {
 var
-accRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIAccessibleRetrieval
-)
-;
-var
-parentElm
-=
-document
-.
-getElementById
-(
-"
-parent
-"
-)
-;
-if
-(
-!
-parentElm
-)
-{
-ok
-(
-false
-"
-no
-parent
-element
-for
-paragraph
-!
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-}
-var
-elm
-=
-document
-.
-getElementById
-(
-"
-para
-"
-)
-;
-if
-(
-!
-elm
-)
-{
-ok
-(
-false
-"
-no
-element
-for
-paragraph
-!
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-}
-/
-/
-It
-'
-s
-currently
-hidden
-.
-Ask
-for
-its
-parent
-'
-s
-nsIAccessNode
-.
-var
 parentElmAccNode
 =
-null
-;
-try
-{
-parentElmAccNode
-=
-accRetrieval
-.
-getAccessibleFor
+getAccessible
 (
-parentElm
-)
-.
-QueryInterface
-(
-Components
-.
-interfaces
-.
+"
+parent
+"
 nsIAccessNode
 )
 ;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-!
-parentElmAccNode
-)
-{
-ok
-(
-false
-"
-No
-accessNode
-for
-parent
-of
-hidden
-paragraph
-!
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-}
 /
 /
 Get
@@ -391,6 +257,73 @@ finish
 )
 ;
 }
+var
+elmAccNode2
+=
+null
+;
+try
+{
+elmAccNode2
+=
+parentElmAccNode
+.
+firstChildNode
+;
+}
+catch
+(
+e
+)
+{
+}
+if
+(
+!
+elmAccNode2
+)
+{
+ok
+(
+false
+"
+No
+accessNode
+for
+hidden
+paragraph
+!
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
+/
+/
+bug
+457369
+is
+(
+elmAccNode
+elmAccNode2
+"
+Different
+access
+nodes
+for
+the
+same
+DOM
+node
+!
+"
+)
+;
 /
 /
 Now
@@ -416,6 +349,43 @@ then
 be
 retrievable
 .
+var
+elm
+=
+document
+.
+getElementById
+(
+"
+p
+"
+)
+;
+if
+(
+!
+elm
+)
+{
+ok
+(
+false
+"
+no
+element
+for
+paragraph
+!
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 elm
 .
 style
@@ -459,26 +429,11 @@ function
 var
 elmAcc
 =
-null
-;
-try
-{
-elmAcc
-=
-accRetrieval
-.
-getAccessibleFor
+getAccessible
 (
 elm
 )
 ;
-}
-catch
-(
-e
-)
-{
-}
 ok
 (
 elmAcc
@@ -628,7 +583,7 @@ none
 id
 =
 "
-para
+p
 "
 >
 I
