--- a/accessible/tests/mochitest/test_bug434464.html
+++ b/accessible/tests/mochitest/test_bug434464.html
@@ -152,39 +152,6 @@ application
 /
 javascript
 "
-src
-=
-"
-chrome
-:
-/
-/
-mochikit
-/
-content
-/
-a11y
-/
-accessible
-/
-common
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
 >
 function
 doTest
@@ -192,16 +159,183 @@ doTest
 )
 {
 var
-parentElmAccNode
+accRetrieval
 =
-getAccessible
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+accessibleRetrieval
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIAccessibleRetrieval
+)
+;
+var
+parentElm
+=
+document
+.
+getElementById
 (
 "
 parent
 "
+)
+;
+if
+(
+!
+parentElm
+)
+{
+ok
+(
+false
+"
+no
+parent
+element
+for
+paragraph
+!
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
+var
+elm
+=
+document
+.
+getElementById
+(
+"
+para
+"
+)
+;
+if
+(
+!
+elm
+)
+{
+ok
+(
+false
+"
+no
+element
+for
+paragraph
+!
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
+/
+/
+It
+'
+s
+currently
+hidden
+.
+Ask
+for
+its
+parent
+'
+s
+nsIAccessNode
+.
+var
+parentElmAccNode
+=
+null
+;
+try
+{
+parentElmAccNode
+=
+accRetrieval
+.
+getAccessibleFor
+(
+parentElm
+)
+.
+QueryInterface
+(
+Components
+.
+interfaces
+.
 nsIAccessNode
 )
 ;
+}
+catch
+(
+e
+)
+{
+}
+if
+(
+!
+parentElmAccNode
+)
+{
+ok
+(
+false
+"
+No
+accessNode
+for
+parent
+of
+hidden
+paragraph
+!
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 /
 /
 Get
@@ -257,73 +391,6 @@ finish
 )
 ;
 }
-var
-elmAccNode2
-=
-null
-;
-try
-{
-elmAccNode2
-=
-parentElmAccNode
-.
-firstChildNode
-;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-!
-elmAccNode2
-)
-{
-ok
-(
-false
-"
-No
-accessNode
-for
-hidden
-paragraph
-!
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-}
-/
-/
-bug
-457369
-is
-(
-elmAccNode
-elmAccNode2
-"
-Different
-access
-nodes
-for
-the
-same
-DOM
-node
-!
-"
-)
-;
 /
 /
 Now
@@ -349,43 +416,6 @@ then
 be
 retrievable
 .
-var
-elm
-=
-document
-.
-getElementById
-(
-"
-p
-"
-)
-;
-if
-(
-!
-elm
-)
-{
-ok
-(
-false
-"
-no
-element
-for
-paragraph
-!
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-}
 elm
 .
 style
@@ -429,11 +459,26 @@ function
 var
 elmAcc
 =
-getAccessible
+null
+;
+try
+{
+elmAcc
+=
+accRetrieval
+.
+getAccessibleFor
 (
 elm
 )
 ;
+}
+catch
+(
+e
+)
+{
+}
 ok
 (
 elmAcc
@@ -583,7 +628,7 @@ none
 id
 =
 "
-p
+para
 "
 >
 I
