bug 302775 -  extractContents doesn't work if start and end node of a Range object is an attribute node, r=peterv, sr=sicking
UltraBlame original commit: 4b28aee8d473bc0de012c26814b70d400f266a79

--- a/dom/tests/mochitest/dom-level1-core/test_hc_attrremovechild2.html
+++ b/dom/tests/mochitest/dom-level1-core/test_hc_attrremovechild2.html
@@ -651,13 +651,6 @@ docName
 ]
 )
 {
-/
-/
-mark
-the
-failures
-as
-todos
 var
 failures
 =
@@ -669,15 +662,7 @@ SimpleTest
 _tests
 )
 ;
-/
-/
-shouldn
-'
-t
-be
-0
-failures
-todo
+ok
 (
 SimpleTest
 .
@@ -693,10 +678,7 @@ failures
 0
 "
 test
-marked
-todo
-should
-fail
+failed
 somewhere
 "
 )
