Bug 460156 -  bring back the old behavior of range.isPointInRange(), r=surkov, sr=sicking
UltraBlame original commit: d84c0a032a2cf0e535e258f053ec670434d024f7

--- a/content/base/test/test_bug451376.html
+++ b/content/base/test/test_bug451376.html
@@ -428,6 +428,120 @@ aRangeID
 "
 )
 ;
+/
+/
+Comparare
+also
+start
+and
+end
+point
+is
+(
+range
+.
+comparePoint
+(
+aStartNode
+aStartOffset
+)
+0
+"
+Wrong
+result
+for
+the
+start
+point
+'
+"
++
+aRangeID
++
+"
+'
+"
+)
+;
+is
+(
+range
+.
+comparePoint
+(
+aEndNode
+aEndOffset
+)
+0
+"
+Wrong
+result
+for
+the
+end
+point
+'
+"
++
+aRangeID
++
+"
+'
+"
+)
+;
+ok
+(
+range
+.
+isPointInRange
+(
+aStartNode
+aStartOffset
+)
+"
+Wrong
+result
+for
+the
+start
+point
+'
+"
++
+aRangeID
++
+"
+'
+"
+)
+;
+ok
+(
+range
+.
+isPointInRange
+(
+aEndNode
+aEndOffset
+)
+"
+Wrong
+result
+for
+the
+end
+point
+'
+"
++
+aRangeID
++
+"
+'
+"
+)
+;
 }
 function
 doTest
@@ -481,7 +595,7 @@ null
 area
 0
 area
-1
+2
 )
 ;
 testRange
@@ -498,7 +612,7 @@ text
 text
 3
 text
-4
+5
 )
 ;
 testRange
@@ -515,7 +629,7 @@ text
 text
 4
 area
-2
+3
 )
 ;
 SimpleTest
