Bug 449159 - Refactor Ogg backend and implement seeking - r+sr=roc
UltraBlame original commit: f941129cae018854f6b39f8b2bb65a8ebf419216

--- a/content/media/video/test/test_seek1.html
+++ b/content/media/video/test/test_seek1.html
@@ -7,39 +7,17 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448534
--
--
->
-<
 head
 >
 <
 title
 >
-Test
-for
-Bug
-448534
+Media
+test
+:
+seek
+test
+1
 <
 /
 title
@@ -130,70 +108,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448535
-"
->
-Mozilla
-Bug
-448534
-<
-/
-a
->
-<
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
 video
 id
 =
@@ -203,33 +117,42 @@ v
 src
 =
 '
-320x240
+seek
 .
 ogg
+'
+onended
+=
+'
+return
+playbackEnded
+(
+)
+;
 '
 onloadedmetadata
 =
 '
 return
-loaded
+startTest
 (
 )
 ;
 '
-onplay
+onseeking
 =
 '
 return
-started
+seekStarted
 (
 )
 ;
 '
-onpause
+onseeked
 =
 '
 return
-stopped
+seekEnded
 (
 )
 ;
@@ -263,6 +186,185 @@ javascript
 "
 >
 var
+startPassed
+=
+false
+;
+var
+endPassed
+=
+false
+;
+var
+seekFlagStart
+=
+false
+;
+var
+seekFlagEnd
+=
+false
+;
+var
+readonly
+=
+true
+;
+var
+completed
+=
+false
+;
+var
+timeout
+;
+ok
+(
+!
+document
+.
+getElementById
+(
+'
+v
+'
+)
+.
+seeking
+"
+seeking
+should
+default
+to
+false
+"
+)
+;
+try
+{
+v1
+.
+seeking
+=
+1
+;
+readonly
+=
+false
+;
+}
+catch
+(
+e
+)
+{
+readonly
+=
+true
+;
+}
+ok
+(
+readonly
+"
+seeking
+should
+be
+readonly
+"
+)
+;
+function
+startTest
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+v
+.
+play
+(
+)
+;
+v
+.
+currentTime
+=
+2
+;
+return
+false
+;
+}
+function
+seekStarted
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+startPassed
+=
+true
+;
+seekFlagStart
+=
+v
+.
+seeking
+;
+return
+false
+;
+}
+function
+seekEnded
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+var
 v
 =
 document
@@ -275,42 +377,53 @@ v
 )
 ;
 var
-played
+t
 =
-false
-;
-var
-completed
-=
-false
-;
-var
-timeout
-;
-function
-loaded
-(
-)
-{
-if
-(
-completed
-)
-return
-false
-;
 v
 .
-play
+currentTime
+;
+ok
 (
+t
+>
+=
+2
+&
+&
+t
+<
+=
+3
+"
+Video
+currentTime
+should
+be
+around
+2
+:
+"
++
+t
 )
+;
+endPassed
+=
+true
+;
+seekFlagEnd
+=
+v
+.
+seeking
 ;
 return
 false
 ;
 }
 function
-started
+playbackEnded
 (
 )
 {
@@ -320,72 +433,55 @@ completed
 )
 return
 false
+;
+completed
+=
+true
+;
+ok
+(
+startPassed
+"
+seeking
+event
+"
+)
+;
+ok
+(
+endPassed
+"
+seeked
+event
+"
+)
+;
+ok
+(
+seekFlagStart
+"
+seeking
+flag
+on
+start
+should
+be
+true
+"
+)
 ;
 ok
 (
 !
-v
-.
-paused
+seekFlagEnd
 "
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
-=
-true
-;
-return
-false
-;
-}
-function
-stopped
-(
-)
-{
-if
-(
-completed
-)
-return
-false
-;
-completed
-=
-true
-;
-ok
-(
-v
-.
-paused
-"
-Video
+seeking
+flag
+on
+end
 should
 be
-paused
-after
-removing
-from
-the
-Document
+false
 "
 )
 ;
@@ -404,7 +500,6 @@ return
 false
 ;
 }
-var
 timeout
 =
 setTimeout
@@ -417,8 +512,7 @@ ok
 (
 false
 "
-Video
-test
+Test
 timed
 out
 "
@@ -429,9 +523,6 @@ SimpleTest
 finish
 (
 )
-;
-return
-false
 ;
 }
 30000
