--- a/content/media/video/test/test_seek3.html
+++ b/content/media/video/test/test_seek3.html
@@ -7,39 +7,17 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448534
--
--
->
-<
 head
 >
 <
 title
 >
-Test
-for
-Bug
-448534
+Media
+test
+:
+seek
+test
+3
 <
 /
 title
@@ -130,70 +108,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448535
-"
->
-Mozilla
-Bug
-448534
-<
-/
-a
->
-<
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
 video
 id
 =
@@ -203,7 +117,7 @@ v
 src
 =
 '
-320x240
+seek
 .
 ogg
 '
@@ -211,25 +125,34 @@ onloadedmetadata
 =
 '
 return
-loaded
+startTest
 (
 )
 ;
 '
-onplay
+onended
 =
 '
 return
-started
+playbackEnded
 (
 )
 ;
 '
-onpause
+onseeking
 =
 '
 return
-stopped
+seekStarted
+(
+)
+;
+'
+onseeked
+=
+'
+return
+seekEnded
 (
 )
 ;
@@ -262,20 +185,30 @@ text
 javascript
 "
 >
-var
-v
-=
-document
+/
+/
+Test
+seeking
+works
+if
+current
+time
+is
+set
+before
+video
+is
+/
+/
+playing
 .
-getElementById
-(
-'
-v
-'
-)
+var
+startPassed
+=
+false
 ;
 var
-played
+endPassed
 =
 false
 ;
@@ -288,7 +221,7 @@ var
 timeout
 ;
 function
-loaded
+startTest
 (
 )
 {
@@ -298,6 +231,24 @@ completed
 )
 return
 false
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+v
+.
+currentTime
+=
+2
 ;
 v
 .
@@ -310,7 +261,7 @@ false
 ;
 }
 function
-started
+seekStarted
 (
 )
 {
@@ -321,33 +272,7 @@ completed
 return
 false
 ;
-ok
-(
-!
-v
-.
-paused
-"
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
+startPassed
 =
 true
 ;
@@ -356,7 +281,7 @@ false
 ;
 }
 function
-stopped
+seekEnded
 (
 )
 {
@@ -367,25 +292,85 @@ completed
 return
 false
 ;
+var
+t
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+.
+currentTime
+;
+ok
+(
+t
+>
+=
+2
+&
+&
+t
+<
+=
+3
+"
+Video
+currentTime
+should
+be
+around
+2
+:
+"
++
+t
+)
+;
+endPassed
+=
+true
+;
+return
+false
+;
+}
+function
+playbackEnded
+(
+)
+{
+if
+(
+completed
+)
+return
+false
 completed
 =
 true
 ;
 ok
 (
-v
-.
-paused
+startPassed
 "
-Video
-should
-be
-paused
-after
-removing
-from
-the
-Document
+send
+seeking
+event
+"
+)
+;
+ok
+(
+endPassed
+"
+send
+seeked
+event
 "
 )
 ;
@@ -404,7 +389,6 @@ return
 false
 ;
 }
-var
 timeout
 =
 setTimeout
@@ -417,8 +401,7 @@ ok
 (
 false
 "
-Video
-test
+Test
 timed
 out
 "
@@ -429,9 +412,6 @@ SimpleTest
 finish
 (
 )
-;
-return
-false
 ;
 }
 30000
