--- a/content/media/video/test/test_seek4.html
+++ b/content/media/video/test/test_seek4.html
@@ -7,39 +7,17 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448534
--
--
->
-<
 head
 >
 <
 title
 >
-Test
-for
-Bug
-448534
+Media
+test
+:
+seek
+test
+4
 <
 /
 title
@@ -130,70 +108,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448535
-"
->
-Mozilla
-Bug
-448534
-<
-/
-a
->
-<
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
 video
 id
 =
@@ -203,7 +117,7 @@ v
 src
 =
 '
-320x240
+seek
 .
 ogg
 '
@@ -211,25 +125,25 @@ onloadedmetadata
 =
 '
 return
-loaded
+startTest
 (
 )
 ;
 '
-onplay
+onseeking
 =
 '
 return
-started
+seekStarted
 (
 )
 ;
 '
-onpause
+onseeked
 =
 '
 return
-stopped
+seekEnded
 (
 )
 ;
@@ -262,20 +176,24 @@ text
 javascript
 "
 >
-var
-v
-=
-document
-.
-getElementById
-(
-'
-v
-'
-)
-;
-var
+/
+/
+Test
+seeking
+works
+if
+current
+time
+is
+set
+but
+video
+is
+not
 played
+.
+var
+startPassed
 =
 false
 ;
@@ -288,7 +206,7 @@ var
 timeout
 ;
 function
-loaded
+startTest
 (
 )
 {
@@ -299,18 +217,30 @@ completed
 return
 false
 ;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
-play
-(
-)
+currentTime
+=
+2
 ;
 return
 false
 ;
 }
 function
-started
+seekStarted
 (
 )
 {
@@ -321,33 +251,7 @@ completed
 return
 false
 ;
-ok
-(
-!
-v
-.
-paused
-"
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
+startPassed
 =
 true
 ;
@@ -356,7 +260,7 @@ false
 ;
 }
 function
-stopped
+seekEnded
 (
 )
 {
@@ -367,27 +271,48 @@ completed
 return
 false
 ;
-completed
+var
+t
 =
-true
+document
+.
+getElementById
+(
+'
+v
+'
+)
+.
+currentTime
 ;
 ok
 (
-v
-.
-paused
+t
+>
+=
+2
+&
+&
+t
+<
+=
+3
 "
 Video
+currentTime
 should
 be
-paused
-after
-removing
-from
-the
-Document
+around
+2
+:
 "
++
+t
 )
+;
+completed
+=
+true
 ;
 clearTimeout
 (
@@ -404,7 +329,6 @@ return
 false
 ;
 }
-var
 timeout
 =
 setTimeout
@@ -417,8 +341,7 @@ ok
 (
 false
 "
-Video
-test
+Test
 timed
 out
 "
@@ -429,9 +352,6 @@ SimpleTest
 finish
 (
 )
-;
-return
-false
 ;
 }
 30000
