--- a/content/media/video/test/test_seek6.html
+++ b/content/media/video/test/test_seek6.html
@@ -7,39 +7,17 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448534
--
--
->
-<
 head
 >
 <
 title
 >
-Test
-for
-Bug
-448534
+Media
+test
+:
+seek
+test
+6
 <
 /
 title
@@ -130,70 +108,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448535
-"
->
-Mozilla
-Bug
-448534
-<
-/
-a
->
-<
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
 video
 id
 =
@@ -203,7 +117,7 @@ v
 src
 =
 '
-320x240
+seek
 .
 ogg
 '
@@ -211,25 +125,34 @@ onloadedmetadata
 =
 '
 return
-loaded
+startTest
 (
 )
 ;
 '
-onplay
+onended
 =
 '
 return
-started
+playbackEnded
 (
 )
 ;
 '
-onpause
+onseeking
 =
 '
 return
-stopped
+seekStarted
+(
+)
+;
+'
+onseeked
+=
+'
+return
+seekEnded
 (
 )
 ;
@@ -262,6 +185,60 @@ text
 javascript
 "
 >
+/
+/
+Test
+for
+a
+seek
+followed
+by
+a
+play
+before
+the
+seek
+completes
+ensure
+we
+play
+at
+the
+end
+of
+the
+seek
+.
+var
+startPassed
+=
+false
+;
+var
+completed
+=
+false
+;
+var
+seekCount
+=
+0
+;
+var
+timeout
+;
+function
+startTest
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
 var
 v
 =
@@ -274,21 +251,18 @@ v
 '
 )
 ;
-var
-played
+v
+.
+currentTime
 =
+2
+;
+return
 false
 ;
-var
-completed
-=
-false
-;
-var
-timeout
-;
+}
 function
-loaded
+seekStarted
 (
 )
 {
@@ -298,6 +272,22 @@ completed
 )
 return
 false
+;
+startPassed
+=
+true
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
 ;
 v
 .
@@ -310,7 +300,7 @@ false
 ;
 }
 function
-started
+seekEnded
 (
 )
 {
@@ -321,42 +311,48 @@ completed
 return
 false
 ;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 ok
 (
-!
 v
 .
-paused
-"
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
+currentTime
+>
 =
-true
+2
+&
+&
+v
+.
+currentTime
+<
+=
+2
+.
+2
+"
+First
+seek
+"
+)
 ;
 return
 false
 ;
 }
 function
-stopped
+playbackEnded
 (
 )
 {
@@ -367,27 +363,18 @@ completed
 return
 false
 ;
+ok
+(
+true
+"
+Playback
+ended
+"
+)
+;
 completed
 =
 true
-;
-ok
-(
-v
-.
-paused
-"
-Video
-should
-be
-paused
-after
-removing
-from
-the
-Document
-"
-)
 ;
 clearTimeout
 (
@@ -404,7 +391,6 @@ return
 false
 ;
 }
-var
 timeout
 =
 setTimeout
@@ -417,8 +403,7 @@ ok
 (
 false
 "
-Video
-test
+Test
 timed
 out
 "
@@ -429,9 +414,6 @@ SimpleTest
 finish
 (
 )
-;
-return
-false
 ;
 }
 30000
