--- a/content/media/video/test/test_seek7.html
+++ b/content/media/video/test/test_seek7.html
@@ -7,39 +7,17 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448534
--
--
->
-<
 head
 >
 <
 title
 >
-Test
-for
-Bug
-448534
+Media
+test
+:
+seek
+test
+7
 <
 /
 title
@@ -130,70 +108,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448535
-"
->
-Mozilla
-Bug
-448534
-<
-/
-a
->
-<
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
 video
 id
 =
@@ -203,7 +117,7 @@ v
 src
 =
 '
-320x240
+seek
 .
 ogg
 '
@@ -211,25 +125,16 @@ onloadedmetadata
 =
 '
 return
-loaded
+startTest
 (
 )
 ;
 '
-onplay
+onseeked
 =
 '
 return
-started
-(
-)
-;
-'
-onpause
-=
-'
-return
-stopped
+seekEnded
 (
 )
 ;
@@ -262,6 +167,24 @@ text
 javascript
 "
 >
+/
+/
+Test
+for
+bug
+identified
+by
+Chris
+Pearce
+in
+comment
+40
+on
+/
+/
+bug
+449159
+.
 var
 v
 =
@@ -275,20 +198,23 @@ v
 )
 ;
 var
-played
+seekCount
 =
-false
+0
 ;
 var
 completed
 =
 false
+;
+var
+interval
 ;
 var
 timeout
 ;
 function
-loaded
+startTest
 (
 )
 {
@@ -299,10 +225,28 @@ completed
 return
 false
 ;
+interval
+=
+setInterval
+(
+function
+(
+)
+{
 v
 .
-play
+currentTime
+=
+Math
+.
+random
 (
+)
+*
+3
+;
+}
+10
 )
 ;
 return
@@ -310,7 +254,7 @@ false
 ;
 }
 function
-started
+seekEnded
 (
 )
 {
@@ -321,72 +265,31 @@ completed
 return
 false
 ;
+seekCount
++
++
+;
 ok
 (
-!
-v
-.
-paused
-"
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
-=
 true
-;
-return
-false
-;
-}
-function
-stopped
-(
+"
+Seek
+"
++
+seekCount
 )
-{
+;
 if
 (
-completed
-)
-return
-false
-;
-completed
+seekCount
 =
-true
-;
-ok
+=
+3
+)
+{
+clearInterval
 (
-v
-.
-paused
-"
-Video
-should
-be
-paused
-after
-removing
-from
-the
-Document
-"
+interval
 )
 ;
 clearTimeout
@@ -394,17 +297,21 @@ clearTimeout
 timeout
 )
 ;
+completed
+=
+true
+;
 SimpleTest
 .
 finish
 (
 )
 ;
+}
 return
 false
 ;
 }
-var
 timeout
 =
 setTimeout
@@ -417,8 +324,7 @@ ok
 (
 false
 "
-Video
-test
+Test
 timed
 out
 "
@@ -429,9 +335,6 @@ SimpleTest
 finish
 (
 )
-;
-return
-false
 ;
 }
 30000
