--- a/content/media/video/test/test_seek8.html
+++ b/content/media/video/test/test_seek8.html
@@ -7,39 +7,17 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448534
--
--
->
-<
 head
 >
 <
 title
 >
-Test
-for
-Bug
-448534
+Media
+test
+:
+seek
+test
+8
 <
 /
 title
@@ -130,70 +108,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448535
-"
->
-Mozilla
-Bug
-448534
-<
-/
-a
->
-<
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
 video
 id
 =
@@ -203,7 +117,7 @@ v
 src
 =
 '
-320x240
+seek
 .
 ogg
 '
@@ -211,25 +125,7 @@ onloadedmetadata
 =
 '
 return
-loaded
-(
-)
-;
-'
-onplay
-=
-'
-return
-started
-(
-)
-;
-'
-onpause
-=
-'
-return
-stopped
+startTest
 (
 )
 ;
@@ -262,6 +158,32 @@ text
 javascript
 "
 >
+/
+/
+If
+a
+NaN
+is
+passed
+to
+currentTime
+make
+sure
+this
+is
+caught
+/
+/
+otherwise
+an
+infinite
+loop
+in
+the
+Ogg
+backend
+occurs
+.
 var
 v
 =
@@ -275,11 +197,6 @@ v
 )
 ;
 var
-played
-=
-false
-;
-var
 completed
 =
 false
@@ -287,8 +204,23 @@ false
 var
 timeout
 ;
+var
+thrown1
+=
+false
+;
+var
+thrown2
+=
+false
+;
+var
+thrown3
+=
+false
+;
 function
-loaded
+startTest
 (
 )
 {
@@ -299,99 +231,117 @@ completed
 return
 false
 ;
+try
+{
 v
 .
-play
-(
-)
-;
-return
-false
+currentTime
+=
+NaN
 ;
 }
-function
-started
+catch
 (
+e
 )
 {
-if
-(
-completed
-)
-return
-false
-;
-ok
-(
-!
-v
-.
-paused
-"
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
+thrown1
 =
 true
 ;
-return
-false
+}
+try
+{
+v
+.
+currentTime
+=
+-
+1
 ;
 }
-function
-stopped
+catch
 (
+e
 )
 {
-if
-(
-completed
-)
-return
-false
-;
-completed
+thrown2
 =
 true
 ;
-ok
-(
+}
+try
+{
 v
 .
-paused
-"
-Video
-should
-be
-paused
-after
-removing
-from
-the
-Document
-"
-)
+currentTime
+=
+Math
+.
+random
 ;
+}
+catch
+(
+e
+)
+{
+thrown3
+=
+true
+;
+}
 clearTimeout
 (
 timeout
+)
+;
+completed
+=
+true
+;
+ok
+(
+thrown1
+"
+Setting
+currentTime
+to
+invalid
+value
+of
+NaN
+"
+)
+;
+ok
+(
+thrown2
+"
+Setting
+currentTime
+to
+invalid
+value
+of
+-
+1
+"
+)
+;
+ok
+(
+thrown2
+"
+Setting
+currentTime
+to
+invalid
+value
+of
+a
+function
+"
 )
 ;
 SimpleTest
@@ -404,7 +354,6 @@ return
 false
 ;
 }
-var
 timeout
 =
 setTimeout
@@ -417,8 +366,7 @@ ok
 (
 false
 "
-Video
-test
+Test
 timed
 out
 "
@@ -429,9 +377,6 @@ SimpleTest
 finish
 (
 )
-;
-return
-false
 ;
 }
 30000
