--- a/content/media/video/test/test_seek5.html
+++ b/content/media/video/test/test_seek5.html
@@ -7,39 +7,17 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448534
--
--
->
-<
 head
 >
 <
 title
 >
-Test
-for
-Bug
-448534
+Media
+test
+:
+seek
+test
+5
 <
 /
 title
@@ -130,70 +108,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-448535
-"
->
-Mozilla
-Bug
-448534
-<
-/
-a
->
-<
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
 video
 id
 =
@@ -203,7 +117,7 @@ v
 src
 =
 '
-320x240
+seek
 .
 ogg
 '
@@ -211,25 +125,25 @@ onloadedmetadata
 =
 '
 return
-loaded
+startTest
 (
 )
 ;
 '
-onplay
+onseeking
 =
 '
 return
-started
+seekStarted
 (
 )
 ;
 '
-onpause
+onseeked
 =
 '
 return
-stopped
+seekEnded
 (
 )
 ;
@@ -262,6 +176,62 @@ text
 javascript
 "
 >
+/
+/
+Test
+for
+a
+seek
+followed
+by
+another
+seek
+before
+the
+first
+is
+complete
+.
+var
+startPassed
+=
+false
+;
+var
+seek1Passed
+=
+false
+;
+var
+seek2Passed
+=
+false
+;
+var
+seekCount
+=
+0
+;
+var
+completed
+=
+false
+;
+var
+timeout
+;
+function
+startTest
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
 var
 v
 =
@@ -274,43 +244,18 @@ v
 '
 )
 ;
-var
-played
-=
-false
-;
-var
-completed
-=
-false
-;
-var
-timeout
-;
-function
-loaded
-(
-)
-{
-if
-(
-completed
-)
-return
-false
-;
 v
 .
-play
-(
-)
+currentTime
+=
+2
 ;
 return
 false
 ;
 }
 function
-started
+seekStarted
 (
 )
 {
@@ -321,42 +266,34 @@ completed
 return
 false
 ;
-ok
-(
-!
-v
-.
-paused
-"
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
+startPassed
 =
 true
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+v
+.
+currentTime
+=
+1
 ;
 return
 false
 ;
 }
 function
-stopped
+seekEnded
 (
 )
 {
@@ -367,25 +304,100 @@ completed
 return
 false
 ;
-completed
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+seekCount
++
++
+;
+if
+(
+seekCount
+=
+=
+1
+)
+{
+if
+(
+v
+.
+currentTime
+>
+=
+2
+&
+&
+v
+.
+currentTime
+<
+=
+2
+.
+2
+)
+seek1Passed
+=
+true
+;
+}
+if
+(
+seekCount
+=
+=
+2
+)
+{
+if
+(
+v
+.
+currentTime
+>
+=
+1
+&
+&
+v
+.
+currentTime
+<
+=
+1
+.
+2
+)
+seek2Passed
 =
 true
 ;
 ok
 (
-v
-.
-paused
+seek1Passed
 "
-Video
-should
-be
-paused
-after
-removing
-from
-the
-Document
+First
+seek
+"
+)
+;
+ok
+(
+seek2Passed
+"
+Second
+seek
 "
 )
 ;
@@ -394,17 +406,21 @@ clearTimeout
 timeout
 )
 ;
+completed
+=
+true
+;
 SimpleTest
 .
 finish
 (
 )
 ;
+}
 return
 false
 ;
 }
-var
 timeout
 =
 setTimeout
@@ -417,8 +433,7 @@ ok
 (
 false
 "
-Video
-test
+Test
 timed
 out
 "
@@ -429,9 +444,6 @@ SimpleTest
 finish
 (
 )
-;
-return
-false
 ;
 }
 30000
