Bug 460871 - fire timeupdate event when playback position changes - r+sr=roc
UltraBlame original commit: 9f3f0b99cf37105b55007736db910af5060edb2b

--- a/content/media/video/test/test_timeupdate1.html
+++ b/content/media/video/test/test_timeupdate1.html
@@ -15,7 +15,9 @@ title
 Media
 test
 :
-ended
+timeupdate
+during
+playback
 <
 /
 title
@@ -137,6 +139,15 @@ playbackEnded
 )
 ;
 '
+ontimeupdate
+=
+'
+return
+timeUpdated
+(
+)
+;
+'
 >
 <
 /
@@ -169,28 +180,27 @@ javascript
 /
 Test
 if
+timeupdate
+is
+dispatched
+and
 the
-ended
-event
-works
-correctly
+current
+time
+during
+the
+/
+/
+update
+is
+increasing
 .
 var
-v
+lastTime
 =
-document
+0
 .
-getElementById
-(
-'
-v
-'
-)
-;
-var
-endPassed
-=
-false
+0
 ;
 var
 completed
@@ -212,11 +222,86 @@ completed
 return
 false
 ;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
 play
 (
 )
+;
+return
+false
+;
+}
+function
+timeUpdated
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+ok
+(
+v
+.
+currentTime
+>
+lastTime
+"
+Check
+currentTime
+of
+"
++
+v
+.
+currentTime
++
+"
+is
+greater
+than
+last
+time
+of
+"
++
+lastTime
+)
+;
+lastTime
+=
+v
+.
+currentTime
 ;
 return
 false
@@ -236,57 +321,6 @@ false
 completed
 =
 true
-;
-ok
-(
-v
-.
-currentTime
->
-=
-3
-.
-9
-&
-&
-v
-.
-currentTime
-<
-=
-4
-.
-0
-"
-Checking
-currentTime
-at
-end
-:
-"
-+
-v
-.
-currentTime
-)
-;
-ok
-(
-v
-.
-ended
-"
-Checking
-playback
-has
-ended
-"
-)
-;
-clearTimeout
-(
-timeout
-)
 ;
 SimpleTest
 .
