--- a/content/media/video/test/test_timeupdate2.html
+++ b/content/media/video/test/test_timeupdate2.html
@@ -15,7 +15,9 @@ title
 Media
 test
 :
-ended
+timeupdate
+and
+size
 <
 /
 title
@@ -128,11 +130,11 @@ startTest
 )
 ;
 '
-onended
+ontimeupdate
 =
 '
 return
-playbackEnded
+timeUpdated
 (
 )
 ;
@@ -170,28 +172,15 @@ javascript
 Test
 if
 the
-ended
-event
-works
-correctly
+media
+size
+during
+the
+first
+timeupdate
+is
+correct
 .
-var
-v
-=
-document
-.
-getElementById
-(
-'
-v
-'
-)
-;
-var
-endPassed
-=
-false
-;
 var
 completed
 =
@@ -212,6 +201,18 @@ completed
 return
 false
 ;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
 play
@@ -223,7 +224,7 @@ false
 ;
 }
 function
-playbackEnded
+timeUpdated
 (
 )
 {
@@ -233,59 +234,77 @@ completed
 )
 return
 false
-completed
+;
+var
+v
 =
-true
+document
+.
+getElementById
+(
+'
+v
+'
+)
 ;
 ok
 (
 v
 .
-currentTime
->
+videoHeight
 =
-3
-.
-9
-&
-&
-v
-.
-currentTime
-<
 =
-4
-.
-0
+240
 "
-Checking
-currentTime
-at
-end
-:
+Check
+video
+height
+of
 "
 +
 v
 .
-currentTime
+videoHeight
++
+"
+is
+240
+"
 )
 ;
 ok
 (
 v
 .
-ended
+videoWidth
+=
+=
+320
 "
-Checking
-playback
-has
-ended
+Check
+video
+width
+of
+"
++
+v
+.
+videoWidth
++
+"
+is
+320
 "
 )
 ;
-clearTimeout
+completed
+=
+true
+;
+v
+.
+pause
 (
-timeout
 )
 ;
 SimpleTest
