--- a/content/media/video/test/test_timeupdate3.html
+++ b/content/media/video/test/test_timeupdate3.html
@@ -15,7 +15,9 @@ title
 Media
 test
 :
-ended
+timeupdate
+and
+size
 <
 /
 title
@@ -128,11 +130,20 @@ startTest
 )
 ;
 '
-onended
+onseeking
 =
 '
 return
-playbackEnded
+startSeek
+(
+)
+;
+'
+ontimeupdate
+=
+'
+return
+timeUpdated
 (
 )
 ;
@@ -170,30 +181,22 @@ javascript
 Test
 if
 the
-ended
-event
-works
-correctly
+media
+size
+during
+the
+first
+timeupdate
+is
+correct
 .
 var
-v
-=
-document
-.
-getElementById
-(
-'
-v
-'
-)
-;
-var
-endPassed
+completed
 =
 false
 ;
 var
-completed
+seeking
 =
 false
 ;
@@ -212,18 +215,32 @@ completed
 return
 false
 ;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
-play
-(
-)
+currentTime
+=
+2
+.
+0
 ;
 return
 false
 ;
 }
 function
-playbackEnded
+startSeek
 (
 )
 {
@@ -233,9 +250,42 @@ completed
 )
 return
 false
-completed
+;
+seeking
 =
 true
+;
+return
+false
+;
+}
+function
+timeUpdated
+(
+)
+{
+if
+(
+completed
+|
+|
+!
+seeking
+)
+return
+false
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
 ;
 ok
 (
@@ -244,9 +294,9 @@ v
 currentTime
 >
 =
-3
+1
 .
-9
+8
 &
 &
 v
@@ -254,38 +304,38 @@ v
 currentTime
 <
 =
-4
+2
 .
-0
+2
 "
-Checking
+Check
 currentTime
-at
-end
-:
+of
 "
 +
 v
 .
 currentTime
++
+"
+is
+within
+range
+in
+timeupdate
+after
+seek
+"
 )
 ;
-ok
-(
+completed
+=
+true
+;
 v
 .
-ended
-"
-Checking
-playback
-has
-ended
-"
-)
-;
-clearTimeout
+pause
 (
-timeout
 )
 ;
 SimpleTest
