Temporarily disable test to see if it's causing other tests to fail on OS X.
UltraBlame original commit: 17e9560465b0928c52011a622ba0b787a363a035

--- a/browser/base/content/test/test_contextmenu.html
+++ b/browser/base/content/test/test_contextmenu.html
@@ -2459,6 +2459,30 @@ success
 failure
 messages
 .
+/
+/
+XXX
+Disable
+test
+to
+diagnose
+cause
+of
+other
+test
+failures
+.
+todo
+(
+false
+"
+Test
+disabled
+"
+)
+;
+/
+/
 var
 subwindow
 =
@@ -2488,12 +2512,16 @@ height
 "
 )
 ;
+/
+/
 subwindow
 .
 onload
 =
 startTest
 ;
+/
+/
 SimpleTest
 .
 waitForExplicitFinish
