Bug 460417 - invalid handling of selection changes inside input element, r=aaronlev, marcoz, sr=neil
UltraBlame original commit: 833d54c1b774f269e4f2a911820b707d23d5d71a

--- a/accessible/tests/mochitest/test_events_caretmove.html
+++ b/accessible/tests/mochitest/test_events_caretmove.html
@@ -292,6 +292,76 @@ aBackTab
 ;
 }
 }
+function
+synthFocusTest
+(
+aNode
+)
+{
+/
+/
+bug
+460417
+this
+.
+node
+=
+aNode
+;
+this
+.
+testFunc
+=
+function
+testFunc
+(
+)
+{
+this
+.
+node
+.
+focus
+(
+)
+;
+}
+}
+function
+synthSelectAllTest
+(
+aNode
+)
+{
+/
+/
+bug
+460417
+this
+.
+node
+=
+aNode
+;
+this
+.
+testFunc
+=
+function
+testFunc
+(
+)
+{
+this
+.
+node
+.
+select
+(
+)
+;
+}
+}
 var
 gTestsArray
 =
@@ -455,6 +525,28 @@ getElementById
 "
 textbox
 "
+)
+;
+gTestsArray
+.
+push
+(
+new
+synthFocusTest
+(
+textbox
+)
+)
+;
+gTestsArray
+.
+push
+(
+new
+synthSelectAllTest
+(
+textbox
+)
 )
 ;
 gTestsArray
