Bug 460932 - text-indent and text-align should really be object attributes, r=aaronlev, marcoz
UltraBlame original commit: 475af432efb15dcee225b70a5f22330085e68157

--- a/accessible/tests/mochitest/test_cssattrs.html
+++ b/accessible/tests/mochitest/test_cssattrs.html
@@ -22,6 +22,23 @@ cgi
 id
 =
 439566
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+460932
 -
 -
 >
@@ -148,150 +165,139 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
+.
+js
+"
 >
-const
-nsIAccessibleRetrieval
+<
+/
+script
+>
+<
+script
+type
 =
-Components
-.
-interfaces
-.
-nsIAccessibleRetrieval
-;
-var
-gAccRetrieval
+"
+application
+/
+javascript
+"
+src
 =
-null
-;
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+attributes
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+>
 function
-testAttr
+testCSSAttrs
 (
 aID
-aName
-aValue
 )
 {
 var
-acc
+node
 =
-null
-;
-try
-{
-acc
-=
-gAccRetrieval
-.
-getAccessibleFor
-(
 document
 .
 getElementById
 (
 aID
 )
-)
 ;
-}
-catch
+var
+computedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
 (
-e
-)
-{
-}
-if
-(
-!
-acc
-)
-{
-ok
-(
-false
+node
 "
-Can
-'
-t
-get
-accessible
-object
-for
 "
-+
-aID
 )
 ;
-return
-;
-}
 var
 attrs
 =
-null
-;
-try
 {
-attrs
-=
-acc
+"
+display
+"
+:
+computedStyle
 .
-attributes
-;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-!
-attrs
-)
-{
-ok
-(
-false
+display
 "
-Can
-'
-t
-get
-accessible
-attributes
-for
+text
+-
+align
 "
-+
-aID
-)
-;
-return
-;
-}
-is
-(
-attrs
+:
+computedStyle
 .
-getStringProperty
+textAlign
+"
+text
+-
+indent
+"
+:
+computedStyle
+.
+textIndent
+}
+;
+testAttrs
 (
-aName
-)
-aValue
-"
-Accessible
-with
-ID
-"
-+
 aID
-+
-"
-has
-wrong
-attribute
-value
-"
+attrs
+true
 )
 ;
 }
@@ -300,120 +306,52 @@ doTest
 (
 )
 {
-gAccRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-nsIAccessibleRetrieval
-)
-;
-testAttr
+testCSSAttrs
 (
 "
 span
 "
-"
-display
-"
-"
-inline
-"
 )
 ;
-testAttr
+testCSSAttrs
 (
 "
 div
 "
-"
-display
-"
-"
-block
-"
 )
 ;
-testAttr
+testCSSAttrs
 (
 "
 p
 "
-"
-display
-"
-"
-block
-"
 )
 ;
-testAttr
+testCSSAttrs
 (
 "
 input
 "
-"
-display
-"
-"
-inline
-"
 )
 ;
-testAttr
+testCSSAttrs
 (
 "
 table
 "
-"
-display
-"
-"
-table
-"
 )
 ;
-testAttr
+testCSSAttrs
 (
 "
 tr
 "
-"
-display
-"
-"
-table
--
-row
-"
 )
 ;
-testAttr
+testCSSAttrs
 (
 "
 td
-"
-"
-display
-"
-"
-table
--
-cell
 "
 )
 ;
@@ -492,6 +430,58 @@ attribute
 Mozilla
 Bug
 439566
+<
+/
+a
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+460932
+"
+title
+=
+"
+text
+-
+indent
+and
+text
+-
+align
+should
+really
+be
+object
+attribute
+"
+>
+Mozilla
+Bug
+460932
 <
 /
 a
