--- a/accessible/tests/mochitest/test_textattrs.html
+++ b/accessible/tests/mochitest/test_textattrs.html
@@ -122,35 +122,74 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+attributes
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
 >
 const
-nsIAccessibleRetrieval
-=
-Components
-.
-interfaces
-.
-nsIAccessibleRetrieval
-;
-const
-nsIAccessibleText
-=
-Components
-.
-interfaces
-.
-nsIAccessibleText
-;
-const
-nsIAccessibleEvent
-=
-Components
-.
-interfaces
-.
-nsIAccessibleEvent
-;
-const
 nsIDOMNSEditableElement
 =
 Components
@@ -158,649 +197,12 @@ Components
 interfaces
 .
 nsIDOMNSEditableElement
-;
-const
-nsIObserverService
-=
-Components
-.
-interfaces
-.
-nsIObserverService
-;
-var
-gAccRetrieval
-=
-null
 ;
 var
 gComputedStyle
 =
 null
 ;
-/
-*
-*
-*
-Test
-text
-attributes
-.
-*
-*
-param
-aID
-the
-ID
-of
-DOM
-element
-having
-text
-accessible
-*
-param
-aOffset
-the
-offset
-inside
-text
-accessible
-to
-fetch
-*
-text
-attributes
-*
-param
-aAttrs
-the
-map
-of
-text
-attributes
-(
-name
-/
-value
-pairs
-)
-*
-param
-aStartOffset
-the
-start
-offset
-where
-text
-attributes
-are
-*
-applied
-*
-param
-aEndOffset
-the
-end
-offset
-where
-text
-attribute
-are
-applied
-*
-/
-function
-testTextAttrs
-(
-aID
-aOffset
-aAttrs
-aStartOffset
-aEndOffset
-)
-{
-var
-accessible
-=
-getTextAccessible
-(
-aID
-)
-;
-if
-(
-!
-accessible
-)
-return
-;
-var
-startOffset
-=
-{
-value
-:
--
-1
-}
-;
-var
-endOffset
-=
-{
-value
-:
--
-1
-}
-;
-var
-attrs
-=
-null
-;
-try
-{
-attrs
-=
-accessible
-.
-getTextAttributes
-(
-false
-aOffset
-startOffset
-endOffset
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-!
-attrs
-)
-{
-ok
-(
-false
-"
-Can
-'
-t
-get
-text
-attributes
-for
-"
-+
-aID
-)
-;
-return
-;
-}
-var
-errorMsg
-=
-"
-for
-"
-+
-aID
-+
-"
-at
-offset
-"
-+
-aOffset
-;
-is
-(
-startOffset
-.
-value
-aStartOffset
-"
-Wrong
-start
-offset
-"
-+
-errorMsg
-)
-;
-is
-(
-endOffset
-.
-value
-aEndOffset
-"
-Wrong
-end
-offset
-"
-+
-errorMsg
-)
-;
-compareTextAttrs
-(
-errorMsg
-attrs
-aAttrs
-)
-;
-}
-/
-*
-*
-*
-Test
-default
-text
-attributes
-.
-*
-*
-param
-aID
-the
-ID
-of
-DOM
-element
-having
-text
-accessible
-*
-param
-aDefAttrs
-the
-list
-of
-default
-text
-attributes
-(
-name
-/
-value
-*
-pairs
-)
-*
-/
-function
-testDefaultTextAttrs
-(
-aID
-aDefAttrs
-)
-{
-var
-accessible
-=
-getTextAccessible
-(
-aID
-)
-;
-if
-(
-!
-accessible
-)
-return
-;
-var
-defAttrs
-=
-null
-;
-try
-{
-defAttrs
-=
-accessible
-.
-defaultTextAttributes
-;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-!
-defAttrs
-)
-{
-ok
-(
-false
-"
-Can
-'
-t
-get
-default
-attributes
-for
-"
-+
-aID
-)
-;
-return
-;
-}
-var
-errorMsg
-=
-"
-.
-Getting
-default
-attributes
-for
-"
-+
-aID
-;
-compareTextAttrs
-(
-errorMsg
-defAttrs
-aDefAttrs
-)
-;
-}
-function
-getTextAccessible
-(
-aID
-)
-{
-var
-node
-=
-document
-.
-getElementById
-(
-aID
-)
-;
-if
-(
-!
-node
-)
-{
-ok
-(
-false
-"
-Can
-'
-t
-get
-the
-element
-with
-ID
-"
-+
-aID
-)
-;
-return
-;
-}
-var
-accessible
-=
-null
-;
-try
-{
-accessible
-=
-gAccRetrieval
-.
-getAccessibleFor
-(
-node
-)
-;
-accessible
-.
-QueryInterface
-(
-nsIAccessibleText
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-!
-accessible
-)
-ok
-(
-false
-"
-Can
-'
-t
-query
-nsIAccessibleText
-interface
-for
-"
-+
-aID
-)
-;
-return
-accessible
-;
-}
-function
-compareTextAttrs
-(
-aErrorMsg
-aAttrs
-aExpectedAttrs
-)
-{
-var
-enumerate
-=
-aAttrs
-.
-enumerate
-(
-)
-;
-while
-(
-enumerate
-.
-hasMoreElements
-(
-)
-)
-{
-var
-prop
-=
-enumerate
-.
-getNext
-(
-)
-.
-QueryInterface
-(
-Components
-.
-interfaces
-.
-nsIPropertyElement
-)
-;
-if
-(
-!
-(
-prop
-.
-key
-in
-aExpectedAttrs
-)
-)
-ok
-(
-false
-"
-Unexpected
-attribute
-'
-"
-+
-prop
-.
-key
-+
-"
-'
-having
-'
-"
-+
-prop
-.
-value
-+
-"
-'
-"
-+
-aErrorMsg
-)
-;
-else
-is
-(
-prop
-.
-value
-aExpectedAttrs
-[
-prop
-.
-key
-]
-"
-Attribute
-'
-"
-+
-prop
-.
-key
-+
-"
-'
-has
-wrong
-value
-"
-+
-aErrorMsg
-)
-;
-}
-for
-(
-var
-name
-in
-aExpectedAttrs
-)
-{
-var
-value
-=
-"
-"
-;
-try
-{
-value
-=
-aAttrs
-.
-getStringProperty
-(
-name
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-!
-value
-)
-ok
-(
-false
-"
-There
-is
-no
-expected
-attribute
-'
-"
-+
-name
-+
-"
-'
-"
-+
-aErrorMsg
-)
-;
-}
-}
 var
 gObserverService
 =
@@ -1004,15 +406,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -1039,15 +432,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
@@ -1192,28 +576,6 @@ doTest
 (
 )
 {
-gAccRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-nsIAccessibleRetrieval
-)
-;
 /
 /
 /
@@ -1335,15 +697,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -1379,15 +732,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
@@ -1612,15 +956,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -1657,15 +992,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
@@ -1984,15 +1310,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -2019,15 +1336,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
@@ -2352,15 +1660,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -2397,15 +1696,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
@@ -2683,15 +1973,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -2728,15 +2009,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
@@ -3013,15 +2285,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -3058,15 +2321,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
@@ -3468,15 +2722,6 @@ gComputedStyle
 .
 fontStyle
 "
-text
--
-align
-"
-:
-gComputedStyle
-.
-textAlign
-"
 font
 -
 size
@@ -3512,15 +2757,6 @@ weight
 gComputedStyle
 .
 fontWeight
-"
-text
--
-indent
-"
-:
-gComputedStyle
-.
-textIndent
 "
 color
 "
