Bug 455482 - In a select nested within a label, the accname contains each option's text, should only contain label's text, patch=Eitan, r=me, marcoz
UltraBlame original commit: 13b5c75e370925d2d59920bd8367653304c96add

--- a/accessible/tests/mochitest/test_nsIAccessible_name.html
+++ b/accessible/tests/mochitest/test_nsIAccessible_name.html
@@ -1428,6 +1428,99 @@ Bar
 "
 )
 ;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+label
+with
+nested
+combobox
+testName
+(
+"
+comboinmiddle
+"
+"
+Subscribe
+to
+ATOM
+feed
+.
+"
+)
+;
 SimpleTest
 .
 finish
@@ -2793,6 +2886,78 @@ Foo
 /
 textarea
 >
+<
+/
+label
+>
+<
+/
+form
+>
+<
+!
+-
+-
+A
+label
+with
+a
+nested
+control
+in
+the
+middle
+-
+-
+>
+<
+form
+>
+<
+label
+id
+=
+"
+comboinmiddle
+"
+>
+Subscribe
+to
+<
+select
+id
+=
+"
+combo3
+"
+name
+=
+"
+occupation
+"
+>
+<
+option
+>
+ATOM
+<
+/
+option
+>
+<
+option
+>
+RSS
+<
+/
+option
+>
+<
+/
+select
+>
+feed
+.
 <
 /
 label
